<resources>
    <string name="app_name">AppTeatro</string>
    <string name="facebook_app_id">1521855401241144</string>
    <string name="fb_login_protocol_scheme">fb1521855401241144</string>

    <string name="google_maps_key">AIzaSyAqHtftBTlkHugteL_9T1zPK_yh9zLdi84</string>

    <string name="next">PRÓXIMO</string>
    <string name="skip">PULAR</string>
    <string name="start">ENTENDI</string>

    <string name="slide_1_title">Eventos</string>
    <string name="slide_1_desc">Descubra os melhores opções de peça!</string>

    <string name="slide_2_title">Programação</string>
    <string name="slide_2_desc">Encontre seu estilo!</string>

    <string name="slide_3_title">Ótimos Descontos</string>
    <string name="slide_3_desc">Encontre um evento que se encaixe no seu bolso!</string>

    <string name="slide_4_title">+Teatro</string>
    <string name="slide_4_desc">Tudo reunido em um só lugar!</string>

    <string name="login_cancelado">LogIn Cancelado</string>
    <string name="login_erro">Erro ao realizar Login</string>
    <string name="login_erro_firebase">Erro ao realizar Login no Firebase</string>
    <string name="logout">Logout</string>

    <string name="not_log_in">Não se pode iniciar a sessão</string>
    <string name="log_out">Log Out</string>
    <string name="revoke">Revoke</string>
    <string name="not_close_session">Não se pode encerrar a sessão</string>
    <string name="not_revoke">Não se pode revogar o acesso</string>
    <string name="not_firebase_auth">Não se pode autenticar com Firebase</string>

    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirmar_senha">Confirme a senha</string>

    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="img_desc_capa_evento">capa do evento</string>
    <string name="title_activity_menu_lateral"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_room">Salas de Bate-Papo</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>

    <!-- Tabs -->
    <string name="eventos">Eventos</string>
    <string name="destaque">Destaque</string>
    <string name="favoritos">Favoritos</string>

    <string name="about_dialog_text">
<![CDATA[
<b>Aplicativo +Teatro</b><br>
Versao %s<br><br>
<a href="https://github.com/lucasf282/AppTeatroAndroid">https://github.com</a><br><br>
	]]>
	</string>
    <string name="title_activity_perfil">Meu Perfil</string>

    <string name="msg_error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

</resources>
